# heme-texts

./: .gitignore  README.md  heme-texts.yml  hw_greet.yml  pyproject.toml  run_tests.py  test_shell_exec.md
archive/initial-development/: cell_profiles.yml  cyto.yml  genes.yml  report.yml  roots.yml
copath_docs/: cp1.md  cp_ihc.md  cp_pbl.md
espanso-configs/: README.md  citrix.yml  terminal-notlinked.yml
match/: README.md  benign.yml  cd.yml  cell_profiles.yml  cells.yml  cluster_of_differentiation.yml  cyto.yml  diag.yml  flow.yml  genes.yml  histo.yml  hp3_pbl.yml  hpi.yml  ihc.yml  ihc_flow.yml  immuno.yml  morph2.yml  report.yml  roots.yml  sign.yml
match/.hidden/: ai-check.yml  benign.yml  diag.yml  flow.yml  genes.yml  histo.yml  immuno.yml  shell-exec.yml
scripts/: README_AI_POLISH.md  ai_script.py  echo_python_version.py  hw_mrvn.py  hw_repy.py  setup_espanso_configs.py
tests/: test_ai_polish.py  test_hw_mrvn.py
